--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/dashboard
 
 OPENAI_API_KEY=sk-proj-u22Tzuko2AlmRBor34uAT3BlbkFJVBK1MkOs4Yv6HEbedtrE
 
+REPLICATE_API_TOKEN=r8_Z6rx5WyHUhA4qtRaIizRGv7enrjYKc20564Hg
