--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.3.21",
     "lucide-react": "^0.417.0",
     "next": "14.2.5",
     "openai": "^4.53.2",
@@ -31,6 +32,7 @@
     "replicate": "^0.32.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "typewriter-effect": "^2.21.0",
     "zod": "^3.23.8",
     "zustand": "^4.5.4"
   },
