--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-hook-form": "^7.52.1",
     "react-markdown": "^9.0.1",
     "replicate": "^0.32.0",
+    "stripe": "^16.6.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "typewriter-effect": "^2.21.0",
