--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1",
     "replicate": "^0.32.0",
     "stripe": "^16.6.0",
