--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cobe": "^0.6.3",
+    "crisp-sdk-web": "^1.0.25",
     "framer-motion": "^11.3.21",
     "lucide-react": "^0.417.0",
     "next": "14.2.5",
